--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,11 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
-    "validator": "^10.7.1"
+    "validator": "^10.7.1",
+    "bcrypt": "^1.0.3",
+    "cors": "^2.8.4",
+    "mongoose": "^5.0.0-rc0",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
