--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "lodash": "^4.17.10",
-    "validator": "^10.7.1",
     "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.10",
     "mongoose": "^5.0.0-rc0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "validator": "^10.7.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
